--- a/frontendshop/categories.html
+++ b/frontendshop/categories.html
@@ -1,14 +1,18 @@
 <!DOCTYPE html>
 <html lang="de">
 <head>
+    <!-- Zeichensatz und Viewport-Einstellungen für responsives Design -->
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Kategorien</title>
+    <!-- Bootstrap CSS wird über das CDN eingebunden -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
 </head>
 <body class="bg-light">
 <div class="container mt-5">
+    <!-- Überschrift der Seite -->
     <h2>Kategorien</h2>
+    <!-- Tabelle zur Anzeige der Kategorien -->
     <table class="table table-bordered">
         <thead>
             <tr>
@@ -17,23 +21,28 @@
                 <th>Aktionen</th>
             </tr>
         </thead>
+        <!-- tbody wird dynamisch via JavaScript (categories.js) befüllt -->
         <tbody id="category-table">
             <!-- Kategorien werden hier eingefügt -->
         </tbody>
     </table>
+    <!-- Button zum Öffnen des Modals zum Hinzufügen einer neuen Kategorie -->
     <button class="btn btn-primary" id="add-category-btn">Kategorie hinzufügen</button>
 
     <!-- Modal für neue Kategorien -->
     <div id="categoryModal" class="modal fade" tabindex="-1">
         <div class="modal-dialog">
             <div class="modal-content">
+                <!-- Modal-Kopfbereich -->
                 <div class="modal-header">
                     <h5 class="modal-title">Neue Kategorie</h5>
                     <button type="button" class="btn-close" data-bs-dismiss="modal"></button>
                 </div>
+                <!-- Modal-Körper: Eingabefeld für den Kategorienamen -->
                 <div class="modal-body">
                     <input type="text" id="category-name" class="form-control" placeholder="Kategoriename">
                 </div>
+                <!-- Modal-Fußbereich mit Button zum Speichern der neuen Kategorie -->
                 <div class="modal-footer">
                     <button type="button" class="btn btn-success" onclick="addCategory()">Speichern</button>
                 </div>
@@ -42,7 +51,9 @@
     </div>
 </div>
 
+<!-- Bootstrap JavaScript Bundle (enthält Popper) wird eingebunden -->
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+<!-- JavaScript-Datei, die die Logik zur Verwaltung der Kategorien enthält -->
 <script src="js/categories.js"></script>
 
 </body>
