--- a/frontendshop/categories.html
+++ b/frontendshop/categories.html
@@ -7,6 +7,8 @@
     <title>Kategorien</title>
     <!-- Bootstrap CSS wird über das CDN eingebunden -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
+    <!-- Eigene CSS-Stile, z.B. für Finanzkarten -->
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body class="bg-light">
 <div class="container mt-5">
