--- a/frontendshop/dashboard.html
+++ b/frontendshop/dashboard.html
@@ -10,6 +10,7 @@
     <!-- Bootstrap Icons für zusätzliche Icon-Unterstützung -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.1/font/bootstrap-icons.css">
     <!-- Eigene CSS-Stile, z.B. für Finanzkarten -->
+    <link rel="stylesheet" href="styles.css">
     <style>
         /* Gestaltung der Finanzkarten */
         .finance-card {
@@ -110,7 +111,7 @@
     <!-- Einkaufsliste: Abschnitt zur Verwaltung und Bestellabwicklung -->
     <div class="row mt-5">
         <div class="col-md-12">
-            <h4 class="mb-4">Einkaufsliste</h4>
+            <h4 class="mb-4">Bestelliste</h4>
             
             <!-- Formular zum Hinzufügen eines neuen Artikels zur Einkaufsliste -->
             <form id="add-item-form" class="mb-4">
@@ -141,6 +142,7 @@
                         <tr>
                             <th>Artikel ID</th>
                             <th>Artikelname</th>
+                            <th>Kategorie</th>
                             <th>Preis</th>
                             <th>Menge</th>
                             <th>Gesamtpreis</th>
