--- a/frontendshop/login.html
+++ b/frontendshop/login.html
@@ -6,6 +6,8 @@
     <title>Login</title>
     <!-- Einbindung von Bootstrap für ein responsives Design und vorgefertigte Styles -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
+    <!-- Eigene CSS-Stile, z.B. für Finanzkarten -->
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body class="bg-light">
     <div class="container d-flex justify-content-center align-items-center vh-100">
