--- a/frontendshop/shoppinglist.html
+++ b/frontendshop/shoppinglist.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Einkaufsliste - Shopverwaltung</title>
-    <!-- Einbindung der externen CSS-Datei für das Styling -->
+    <!-- Eigene CSS-Stile, z.B. für Finanzkarten -->
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
